<resources>
    <string name="app_name">StyleMate</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="Welcome">Welcome Onboard</string>
    <string name="Logo">Style Mate</string>
    <string name="Landing_Page">Let\'s Get Started</string>
    <string name="Login">Login</string>
    <string name="sign_up">Sign In</string>
    <string name="Hello">Hello Everyone !</string>
    <string name="Headline">Selamat Datang di Style Mate Silahkan Daftar ya !</string>
    <string name="Tagline">Style Mate Your Style Your Life !</string>
    <string name="Nama_Lengkap">Masukan Nama Lengkap</string>
    <string name="masukan_nama_lengkap">Masukan Nama Lengkap</string>
    <string name="email">Email</string>
    <string name="Email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="register_to_login">Register to login? " " </string>
    <string name="Headline_Login">Let\'s Go Everyone !</string>
    <string name="Tagline_login">Gayamu tentukan penampilanmu !</string>
    <string name="Headline_login">Let\'s Go Everyone !</string>
    <string name="Lupa_Password">Forgot Password ?</string>
    <string name="login_to_register">Belum Punya Akun ?</string>
    <string name="Welcome_splash">Selamat Datang di Style Mate</string>
    <string name="Landing_Description">Selamat Datang di Style Mau Gaya Rambut Apa Hari ini ?</string>
    <string name="Landing_Handline">Style Mate Your Style Your Life !</string>
    <string name="password_length">Password Harus Berisi Minimal 8 Karakter</string>



    //Buat Onboarding
    <string name="title_menu_1">Temukan Salon Terbaik</string>
    <string name="title_menu_2">Temukan Salon Terdekat dari Anda</string>
    <string name="title_menu_3">Bingung Gaya Rambut?</string>
    <string name="title_menu_4">Temukan Rekomendasi Gaya Rambut Terbaik</string>
    <string name="desc_menu_1">Salon Terbaik adalah idaman semua orang, kualitas dan kenyamanan sangat dibutuhkan semua orang.</string>
    <string name="desc_menu_2">Anda kebingungan mencari salon di sekitar?. Kita menghadirkan fitur untuk menampilkan salon yang berada disekitar anda, kapan pun dan dimana pun.</string>
    <string name="desc_menu_3">Gaya rambut adalah salah satu hal yang dapat mempengaruhi penampilan. Anda bisa mencari referensi dalam aplikasi Style Mate.</string>
    <string name="desc_menu_4">Kami hadirkan fitur Rekomendadi Gaya Rambut dengan tujuan memudahkan anda yang kebingungan mengenai gaya rambut apa yang sesuai dengan muka anda.</string>
    <string name="learn_now">Coba Sekarang</string>

</resources>